--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-RECAPTCHA_SITE_KEY=your_real_site_key_here
-RECAPTCHA_SECRET_KEY=your_real_secret_key_here
+RECAPTCHA_SITE_KEY="6Lek5B4sAAAAAPjZjiXSOm5HYNco4J9H3kVnCnhV"
+RECAPTCHA_SECRET_KEY="6Lek5B4sAAAAAEv_Lo1myQpYyAa-tQQysJHAJCkF"
