--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,7 @@
 RECAPTCHA_SITE_KEY="6Lek5B4sAAAAAPjZjiXSOm5HYNco4J9H3kVnCnhV"
 RECAPTCHA_SECRET_KEY="6Lek5B4sAAAAAEv_Lo1myQpYyAa-tQQysJHAJCkF"
+SMTP_SERVER="smtp.resend.com"
+SMTP_PORT="465"
+SMTP_USER="resend"
+SMTP_PASS="re_RQs14xkL_AKD8VjE5UM78GhCyMPZqWhEk"
+SMTP_FROM_EMAIL="onboarding@resend.dev"
